--- a/todolist/index.html
+++ b/todolist/index.html
@@ -1,1 +1,78 @@
-<p>todolist</p>
+<!DOCTYPE html>
+<html lang="">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Noto+Sans+TC:400, 500, 700" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d5b61e4669.js"></script>
+    <title>MY TO-DO-LIST</title>
+</head>
+
+<body>
+    <div class="wrap">
+        <div class="hero center">
+            <div class="title-wrap">
+                <h3 class="hero-title">
+                    <a href="index.html">My ToDoList</a>
+                </h3>
+            </div>
+            <div class="add-new-task js-add-new-task">
+                <div class="tag-row">
+                    <span class="tag">private</span>
+                    <span class="tag">work</span>
+                    <span class="tag">family</span>
+                    <span class="tag">learning</span>
+                </div>
+                <input type="text" class="task-input js-input" placeholder="add a task...">
+                <i class="fas fa-plus-square add js-add"></i>
+            </div>
+            <p class="info js-info"></p>
+            <!-- <p class="info">Congratulations! No more task to do.</p> -->
+        </div>
+        <div class="list-area-wrap">
+            <div class="list-area center">
+                <div class="select js-select">
+                    <i class="fas fa-tag"></i>
+                    <div id="task-type">
+                        <span class="chosen js-chosen">all</span>
+                        <ul class="type-selector hide js-type-selector">
+                            <li class="option">all</li>
+                        </ul>
+                    </div>
+                </div>
+                <ul class="todolist js-todolist">
+                    <!-- <li data-num="0">
+                        <div class="list-task">
+                            <i class="fas fa-check-circle done" aria-hidden="true"></i>
+                            <span class="list-tag family">family</span>
+                            <span class="task-name">;llll</span>
+                        </div>
+                        <div>
+                            <i class="fas fa-pen modify" data-num="0" aria-hidden="true" style="padding: 0.8rem;"></i>
+                            <i class="fas fa-trash delete" data-num="0" aria-hidden="true" style="padding: 0.8rem;"></i>
+                        </div>
+                    </li> -->
+                </ul>
+                <div class="remove js-removeAll">
+                    <a href="#" class="delete-all js-delete-all">Remove All</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <span>六角學院 -
+            <a href="https://www.udemy.com/javascript-learning/" target="_blank">JS 學徒的試鍊</a> - 107堂課堂作業練習</span>
+        </a>
+        <br> 2019 Made with
+        <i class="fas fa-heart"></i> by
+        <a href="https://github.com/kayahino/todolist" target="_blank">CLEO</a>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="./js/jqscript.js"></script>
+    <script src="./js/jsscript.js"></script>
+</body>
+
+</html>
