--- a/todolist/index.html
+++ b/todolist/index.html
@@ -71,7 +71,7 @@
         <a href="https://github.com/kayahino/todolist" target="_blank">CLEO</a>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/jqscript.js"></script>
+    <!-- <script src="./js/jqscript.js"></script> -->
     <script src="./js/jsscript.js"></script>
 </body>
 
